    widget), then dont draw the background behind the spin arrows.
14. Fix right margin of tab labels.
15. Fix scrollview frame when squared and etched.
16. Fix QDial 'handle' position.
17. Replace custom window-drag code with that of Oxygen.
18. Change window-drag options to allow dragging via toolbars and other empty areas.

1.4.3
-----
1. Fix crash (mainly on Arch linux) when apps (e.g. dolphin) exit.
2. Add VirtualBox to list of apps that need menubar state to be saved.
3. Dont force alternate colours for combo-box pop-up menus.
4. Fix left-hand sunken button background in kwin theme when drawing a dark
   outer border.

1.4.2
-----
1. Remove some warnings when building on windows.
2. Provide a qmake project to aid building on windows - thanks to Hugues Delorme
3. When compiled as Qt-only, embed oxygen PNGs for message box icons.
4. Add option to hide titlebar buttons on inactive windows.

1.4.1
-----
1. Fix compilation when -DQTC_STYLE_SUPPORT=true
2. Re-add support for keep above/below kwin buttons.
3. Fix compilation with KDE SC4.3
4. Add option to draw dark inner border in kwin decoration.
5. Fix garbled window decoration when not compositing.
6. For MDI window titles, if left-aligning ensure text is at least 6 pixels
   from edge.
7. Fix(?) compilation on non-X11 platforms - only link to, and use, QtDBus on unix.

1.4.0
-----
 1. Add striped window and menu background options.
 2. Added options to not square frames and tab frames.
 3. Fix 'bleed' of progress stripes when using animated faded stripes.
 4. Blend menubar and window titlebar gradients if:
         menubar, titlebar, and inactive titlebar gradients match AND
         not blending titlebar gradient AND
         using window titlebar colour for menubar AND
         extending window drag into menubar
 5. Default titlebar colours to window colours - matches KDE4 default.
 6. If using window border colours as menubar colours, and the active and inactive