@@ -2062,13 +2062,30 @@
         </widget>
        </item>
        <item row="9" column="0">
+        <widget class="QLabel" name="label_55">
+         <property name="text">
+          <string>Draw separator on active windows:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="1">
+        <widget class="QCheckBox" name="windowBorder_separator">
+         <property name="whatsThis">
+          <string>If enabled, a separator is drawn between the titlebar and window.</string>
+         </property>
+         <property name="text">
+          <string>Enabled</string>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="0">
         <widget class="QLabel" name="label_92">
          <property name="text">
           <string>Drag windows from:</string>
          </property>
         </widget>
        </item>
-       <item row="9" column="1">
+       <item row="10" column="1">
         <widget class="QComboBox" name="windowDrag">
         </widget>
        </item>
@@ -4143,6 +4160,7 @@
   <tabstop>windowBorder_blend</tabstop>
   <tabstop>windowBorder_menuColor</tabstop>
   <tabstop>windowBorder_addLightBorder</tabstop>
+  <tabstop>windowBorder_separator</tabstop>
   <tabstop>windowDrag</tabstop>
   <tabstop>titlebarButtonAppearance</tabstop>
   <tabstop>titlebarButtons_noFrame</tabstop>
